# template-python-gcloud

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: dependabot.yml
